# economic-recovery

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  v.env
.github/workflows/: deploy.yml
.ipynb_checkpoints/: main-checkpoint.py
data/: data.sqlite  economic_indices.csv  unemployment.csv
scripts/: api_data_fetcher.py  config.py  database_handler.py  recovery.py
scripts/.ipynb_checkpoints/: api_data_fetcher-checkpoint.py  config-checkpoint.py  database_handler-checkpoint.py  recovery_index-checkpoint.py
static/: dashboard.html
static/.ipynb_checkpoints/: dashboard-checkpoint.html
